@@ -26,7 +26,7 @@
 #include <string>
 
 // Convert an integer to a string
-string inttostring(int a);
+string om_inttostring(int a);
 
 // Convert a double to a string
 string doubletostring(double a);
